# MCPs

./: README.md  sync.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  (+3 more)
acedatacloud/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
aichat/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
claude/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
deepseek/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
docs/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  server.json
docs/core/: __init__.py  client.py  config.py  exceptions.py  server.py
docs/core/data/: mcp_servers.json
docs/deploy/production/: deployment.yaml  ingress.yaml  service.yaml
docs/prompts/: __init__.py
docs/scripts/: gen_mcp_servers.py
docs/tests/: test_helpers.py
docs/tools/: __init__.py  catalog_tools.py  doc_tools.py  example_tools.py  meta_tools.py  model_tools.py
face/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
fish/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
flux/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
gemini/: .env.example  .gitignore  .ruff.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  glama.json  main.py  pyproject.toml  server.json  smithery.yaml
glm/: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
grok/: .env.example  .gitignore  .ruff.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
grok/.github/: copilot-instructions.md
grok/.github/workflows/: publish.yml
grok/core/: __init__.py  client.py  config.py  exceptions.py  oauth.py  server.py  types.py  utils.py
grok/deploy/production/: deployment.yaml  ingress.yaml  service.yaml
grok/jetbrains/: README.md  gradle.properties
grok/jetbrains/src/main/kotlin/com/acedatacloud/mcp/grok/: CopyConfigActions.kt  McpSettings.kt  McpSettingsConfigurable.kt  McpStartupActivity.kt
grok/prompts/: __init__.py
grok/tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_integration.py  test_utils.py
grok/tools/: __init__.py  chat_tools.py  info_tools.py  task_tools.py  video_tools.py
grok/vscode/: README.md  extension.js  package.json
hailuo/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
happyhorse/: .env.example  .gitignore  .ruff.toml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  glama.json  main.py  pyproject.toml  server.json  smithery.yaml
kimi/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
kling/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
luma/: CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
maestro/: .env.example  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
midjourney/: Dockerfile  README.md  main.py  pyproject.toml
nanobanana/: README.md  main.py  server.json
openai/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
platform/: .env.example  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml
producer/: main.py
scripts/: build_vscode_extensions.py  vscode_extensions.yaml
seedance/: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  smithery.yaml
seedream/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
serp/: Dockerfile  README.md  docker-compose.yaml  main.py
sora/: README.md  main.py  server.json  smithery.yaml
suno/: CONTRIBUTING_TO_MCP_SERVERS.md  Dockerfile  README.md  docker-compose.yaml  server.json  smithery.yaml
veo/: CHANGELOG.md  main.py
wan/: README.md  main.py
webextrator/: main.py
(+586 files in other folders)
