[project]
name = "mcp-docs"
version = "2026.6.23.4"
description = "Public MCP server for AceData Cloud documentation, API specs, models, pricing & code examples"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AceDataCloud", email = "support@acedata.cloud" }]
maintainers = [{ name = "AceDataCloud", email = "support@acedata.cloud" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "acedata",
    "documentation",
    "openapi",
    "llm",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "mypy>=1.10.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "respx>=0.21.0"]

[project.scripts]
mcp-docs = "main:main"

[project.urls]
Homepage = "https://github.com/AceDataCloud/DocsMCP"
Repository = "https://github.com/AceDataCloud/DocsMCP"
Issues = "https://github.com/AceDataCloud/DocsMCP/issues"

[build-system]
requires = ["hatchling>=1.21.0,<1.30.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "tools", "prompts", "main.py"]

[tool.hatch.build.targets.sdist]
include = ["core/", "tools/", "prompts/", "tests/", "main.py", "README.md", "LICENSE", ".env.example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short"]
